# bloat-hunter

./: .gitignore  CLAUDE.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  pyproject.toml
.claude/commands/: commit.md
reports/: bugs-config-file-support.md  bugs-export-results.md  bugs-global-package-caches.md  bugs-parallel-scanning.md  bugs-size-thresholds-cli.md  bugs-system-cache-scanning.md  fixes-export-results.md  refactors-config-file-support.md  refactors-export-results.md  refactors-global-package-caches.md  refactors-parallel-scanning.md  refactors-size-thresholds-cli.md  refactors-system-cache-scanning.md
src/bloat_hunter/: __init__.py  cli.py  config.py
src/bloat_hunter/core/: __init__.py  analyzer.py  cache_scanner.py  cleaner.py  duplicates.py  exporter.py  package_scanner.py  parallel.py  scanner.py
src/bloat_hunter/patterns/: __init__.py  base.py  browser_cache.py  cache.py  dev.py  system.py
src/bloat_hunter/platform/: __init__.py  detect.py
src/bloat_hunter/safety/: __init__.py  protected.py
src/bloat_hunter/ui/: __init__.py  console.py  prompts.py
tests/: __init__.py  conftest.py  test_browser_cache.py  test_cache_scanner.py  test_config.py  test_duplicates.py  test_package_scanner.py  test_parallel.py  test_platform.py  test_safety.py  test_scanner.py
