[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloat-hunter"
version = "0.1.0"
description = "Cross-platform disk cleanup tool that hunts down bloat, caches, and space hogs"
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.10"
authors = [{ name = "creativeprofit22" }]
keywords = ["disk", "cleanup", "cache", "bloat", "storage", "cross-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "send2trash>=1.8.0",
    "InquirerPy>=0.3.4",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
duplicates = [
    "xxhash>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "xxhash>=3.0.0",
]

[project.scripts]
bloat-hunter = "bloat_hunter.cli:app"
bh = "bloat_hunter.cli:app"

[project.urls]
Homepage = "https://github.com/creativeprofit22/bloat-hunter"
Repository = "https://github.com/creativeprofit22/bloat-hunter"
Issues = "https://github.com/creativeprofit22/bloat-hunter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bloat_hunter"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bloat_hunter --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "B", "I", "N", "UP", "S"]
ignore = ["S101", "B008"]  # S101: assert in tests, B008: typer.Option/Argument patterns

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
